# tao

./: README.md  tao.cabal
app/: Main.hs
data/: 1.tao  10.tao  11.tao  12.tao  13.tao  14.tao  15.tao  16.tao  17.tao  18.tao  19.tao  2.tao  20.tao  21.tao  22.tao  23.tao  24.tao  25.tao  26.tao  27.tao  28.tao  29.tao  3.tao  30.tao  31.tao  32.tao  33.tao  34.tao  35.tao  36.tao  37.tao  38.tao  39.tao  4.tao  40.tao  41.tao  42.tao  43.tao  44.tao  45.tao  (+41 more)
src/: Main.hs
src/Tao/Section/: Number.hs  Text.hs
src/Utils/: Numeric.hs
