name:                tao
version:             0.3.1.3
synopsis:            print a section of the Tao-Te-Ching
description:         Please see README.md
homepage:            https://github.com/rimbaudcode/tao#readme
license:             BSD3
license-file:        LICENSE
author:              art rimbaud
maintainer:          rimbaud1854(dot)91[At]gmail(DOT)com
copyright:           Copyright: (c) 2016 rimbaudcode
category:            value
build-type:          Simple
cabal-version:       >=1.10
--
data-files:          data/*.tao

executable tao
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , filepath >= 1.4 && < 1.5
                     , random >= 1.1 && < 1.2
                     , text >= 1.2 && < 1.3
  other-modules:       Paths_tao
                     , Tao.Section.Number
                     , Tao.Section.Text
                     , Utils.Numeric
  ghc-options:        -fdefer-type-errors
                      -fforce-recomp
                      -fobject-code
                      -funbox-strict-fields
                      -fwarn-implicit-prelude
                      -fwarn-incomplete-patterns
                      -fwarn-incomplete-record-updates
                      -fwarn-incomplete-uni-patterns
                      -fwarn-missing-signatures
                      -fwarn-monomorphism-restriction
                      -fwarn-name-shadowing
                      -fwarn-orphans
                      -fwarn-overlapping-patterns
                      -fwarn-tabs
                      -fwarn-unused-do-bind
                      -fwarn-unused-imports
                      -Wall
                      -rtsopts
                      -threaded
                      -j4
                      -O2
