name:                tao
version:             0.3.1.3
synopsis:            print a section of the Tao-Te-Ching
description:         Please see README.md
homepage:            https://github.com/rimbaudcode/tao#readme
license:             BSD3
license-file:        LICENSE.md
author:              art rimbaud
maintainer:          rimbaud1854(dot)91[At]gmail(DOT)com
copyright:           Copyright: (c) 2016 rimbaudcode
category:            Text
build-type:          Simple
cabal-version:       >=1.10
--
data-files:          data/*.tao

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Tao.Section.Number
                     , Tao.Section.Text
                     , Utils.Numeric
  build-depends:       base >= 4.7 && < 5
                     , filepath >= 1.4 && < 1.5
                     , random >= 1.1 && < 1.2
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010
  other-modules:       Paths_tao

executable tao
  hs-source-dirs:      app
                     , src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , tao
                     , filepath >= 1.4 && < 1.5
                     , random >= 1.1 && < 1.2
                     , text >= 1.2 && < 1.3
  other-modules:       Paths_tao
                     , Tao.Section.Number
                     , Tao.Section.Text
                     , Utils.Numeric
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite tao-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tao
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rimbaudcode/tao
