name:                tao
version:             0.4.0.0
synopsis:            print a section of the Tao-Te-Ching
description:         Please see README.md
homepage:            https://github.com/rimbaudcode/tao#readme
license:             BSD3
license-file:        LICENSE.md
author:              art rimbaud
maintainer:          rimbaud1854(dot)91[At]gmail(DOT)com
copyright:           Copyright: (c) 2016 rimbaudcode
category:            Text
build-type:          Simple
cabal-version:       >=1.10
--
data-files:          data/*.tao

library
  hs-source-dirs:      src
  exposed-modules:     Tao.Section.Number
                     , Tao.Section.Text
                     , Utils.Numeric
  build-depends:       base >= 4.7 && < 5
                     , filepath >= 1.4 && < 1.5
                     , random >= 1.1 && < 1.2
                     , text >= 1.2 && < 1.3
  default-language:    Haskell2010
  other-modules:       Paths_tao
  ghc-options:       -fdefer-type-errors
                     -Wall
                     -fforce-recomp
                     -fobject-code
                     -fprof-auto
                     -funbox-strict-fields
                     -fwarn-implicit-prelude
                     -fwarn-incomplete-patterns
                     -fwarn-incomplete-record-updates
                     -fwarn-incomplete-uni-patterns
                     -fwarn-missing-signatures
                     -fwarn-monomorphism-restriction
                     -fwarn-name-shadowing
                     -fwarn-orphans
                     -fwarn-overlapping-patterns
                     -fwarn-tabs
                     -fwarn-unused-do-bind
                     -fwarn-unused-imports
                     -j4
                     -O2
                     -fexcess-precision
                     -optc-O2

executable tao
  hs-source-dirs:      app
                     , src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , tao
                     , filepath >= 1.4 && < 1.5
                     , random >= 1.1 && < 1.2
                     , text >= 1.2 && < 1.3
  other-modules:       Paths_tao
                     , Tao.Section.Number
                     , Tao.Section.Text
                     , Utils.Numeric
  ghc-options:       -fdefer-type-errors
                     -Wall
                     -fforce-recomp
                     -fobject-code
                     -fprof-auto
                     -funbox-strict-fields
                     -fwarn-implicit-prelude
                     -fwarn-incomplete-patterns
                     -fwarn-incomplete-record-updates
                     -fwarn-incomplete-uni-patterns
                     -fwarn-missing-signatures
                     -fwarn-monomorphism-restriction
                     -fwarn-name-shadowing
                     -fwarn-orphans
                     -fwarn-overlapping-patterns
                     -fwarn-tabs
                     -fwarn-unused-do-bind
                     -fwarn-unused-imports
                     -j4
                     -rtsopts
                     -threaded
                     -with-rtsopts=-N
                     -O2
                     -fexcess-precision
                     -optc-O2

test-suite tao-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tao
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rimbaudcode/tao
